force-app/main/default/objects/vlocity_ins__VlocityStateModel__c/fields/vlocity_ins__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>InsuranceClaim__c</fullName>
            </value>
            <value>
                <fullName>Application__c</fullName>
            </value>
            <value>
                <fullName>ClaimCoverage__c</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Claim Coverage</fullName>
            </value>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>