force-app/main/default/objects/vlocity_ins__VlocityStateModel__c/fields/vlocity_ins__TypeFieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TypeFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>