force-app/main/default/objects/vlocity_ins__VlocityStateModel__c/fields/vlocity_ins__TypeFieldValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TypeFieldValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>